--- a/lib/email_ia_web/components/layouts/root.html.heex
+++ b/lib/email_ia_web/components/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-gray-200">
+  <body class="deco-bg">
     {@inner_content}
   </body>
 </html>
