--- a/lib/email_ia_web/controllers/auth_html/signin.html.heex
+++ b/lib/email_ia_web/controllers/auth_html/signin.html.heex
@@ -1,5 +1,5 @@
 <.flash_group flash={@flash} />
-<div class="flex flex-col items-center justify-center h-screen deco-bg">
+<div class="flex flex-col items-center justify-center h-screen">
   <div class="text-center gap-3 flex flex-col border-2 rounded-none border-gray-300 bg-slate-100 p-4 w-1/3 h-1/3 items-center justify-center">
     <h1 class="text-4xl font-bold">Emailia</h1>
     <h2 class="text-2xl font-bold">Welcome to Email IA</h2>
