clean a little bit of emails view

--- a/lib/email_ia_web/components/layouts/app.html.heex
+++ b/lib/email_ia_web/components/layouts/app.html.heex
@@ -1,10 +1,10 @@
 <header class="bg-black">
   <div class="flex items-center justify-between border-b py-3 text-sm px-4 sm:px-6 lg:px-8">
     <div class="flex items-center gap-4">
-      <a href="/dashboard">
+      <.link navigate={~p"/dashboard"}>
         <.icon name="hero-at-symbol" class="text-white" />
-      </a>
-      <p class="bg-brand/5 text-white rounded-full px-2 font-medium leading-6">
+      </.link>
+      <p class="bg-brand/5 text-white rounded-full px-2  leading-6">
         EmailIA
       </p>
     </div>
